style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 16px;
    font-family: 'Outfit', sans-serif;
    color: hsl(24, 5%, 18%);
    /* font-family: 'Young Serif', serif; */
}

body {
    background-color: hsl(30, 54%, 90%);
    padding: 10rem 0;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0 auto;
    width: 40%;
    background-color: hsl(0, 0%, 100%);
    border-radius: 30px;
    padding: 1rem 3rem;
}

section {
    margin: 2rem 0;
}

h1 {
    font-family: 'Young Serif', serif;
    font-size: 2.8rem;
    padding: 2rem 0;
    color: black;
    font-weight: 400;
}

h2 {
    font-family: 'Young Serif', serif;
    color: hsl(14, 45%, 36%);
    font-size: 2rem;
    font-weight: 400;
    margin-bottom: 1rem;
}

h3 {
    font-size: 1.25rem;
    color: hsl(332, 51%, 32%);
}

li {
    margin-top: 1rem;
    margin-left: 10px;
    list-style-position: outside;
    margin-left: 25px;
}

li::marker {
    color: hsl(332, 51%, 32%);
}

ol li {
    position: relative;
    margin-left: 25px;
    text-indent: 20px;
}

ol li::marker {
    font-weight: 600;
}

.header-img {
    width: 100%;
    height: auto;
    border-radius: 15px;
}

.prep {
    background-color: hsl(330, 100%, 98%);
    border-radius: 15px;
    padding: 2rem 1.5rem;
}

.bold {
    font-weight: 600;
}

.clr-nutmeg {
    color:hsl(14, 45%, 36%);
}

.padding-1 {
    padding-bottom: 1.5rem;
}

hr.rounded {
    border-top: 1px solid #bbb;
    border-radius: 5px;
    opacity: 0.8;
}

.grid-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(4, 3rem);
    align-items: center;
}

.grid-container div {
    padding-left: 2rem;
    border-bottom: 1px solid #bbb;
    height: 100%;
}

.grid-container div:last-of-type, div:nth-last-of-type(2) {
    border-bottom: none;
}

.grid-container div p {
    vertical-align: center;
}

.flex-container {
    display: flex;
}

.flex-item {
    align-self: center;
}

@media only screen and (max-width: 375px)  {
    body {
        background-color: hsl(30, 54%, 90%);
        padding: 0;
        padding-top: 8rem;
    }

    main {
        display: flex;
        flex-direction: column;
        justify-content: center;
        width: 100%;
        background-color: hsl(0, 0%, 100%);
        padding: 1rem 2rem;
    }

    .header-img {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: auto;
        border-radius: 0;
    }

    h1 {
        font-size: 2rem;
    }

    section {
        margin: 1rem 0;
    }

    hr {
        margin: 1rem 0;
    }
    
}

